// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<dumbbell-plot> rendered-html annotations should pass annotation prop 1`] = `
Array [
  <g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation">
  <g class="annotations">
    <g class="annotation">
      <g class="annotation-connector"></g>
      <g class="annotation-subject"></g>
      <g class="annotation-note">
        <g class="annotation-note-content">
          <rect class="annotation-note-bg"></rect>
          <text class="annotation-note-label" dx="0" fill="#226092" y="0">
            <tspan dy="0.8em" x="0"></tspan>
          </text>
          <text class="annotation-note-title"></text>
        </g>
      </g>
    </g>
    <g class="annotation"></g>
  </g>
</g>,
]
`;

exports[`<dumbbell-plot> rendered-html event-emitter generic event testing label based events [event] clickEvent: event object should emit and contain first data record when first mark is clicked 1`] = `
<text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-North America-CardA" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="67.125" data-y="NaN" dx="0.0em" dy="0.9em" fill="#587893" opacity="1" text-anchor="middle" x="67.125" y="206.15384615384613">
  3.5b
</text>
`;

exports[`<dumbbell-plot> rendered-html event-emitter generic event testing label based events [event] hoverEvent: event object should emit and contain first data record when first mark is hovered 1`] = `
<text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-North America-CardA" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="67.125" data-y="NaN" dx="0.0em" dy="0.9em" fill="#587893" opacity="1" text-anchor="middle" x="67.125" y="206.15384615384613">
  3.5b
</text>
`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 1`] = `Array []`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 2`] = `Array []`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 3`] = `Array []`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 1`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c elementsAreInterface: accessibility.elementsAreInterface needs a boolean value either true or false",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 2`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation should have minimum 40 characters and a combined length between 40 and 500 characters",
    "font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary should have minimum 40 characters and a combined length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c statisticalNotes: accessibility.statisticalNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c structureNotes: accessibility.structureNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
]
`;

exports[`<dumbbell-plot> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 3`] = `
Array [
  Array [
    "%c unique-d-plot has accessibility warnings and other messages",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<dumbbell-plot> rendered-html reference line should pass referenceLines prop 1`] = `
<g aria-hidden="true" class="dumbbell-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation">
  <g class=".dumbbell-reference" opacity="1" transform="translate(0,87.00787278477907)">
    <line class="dumbbell-reference-line" data-testid="reference-line" opacity="0" x1="0" x2="537" y1="0" y2="0"></line>
    <text class="dumbbell-reference-line-label" dx="0.1em" dy="0.3em" opacity="0" text-anchor="start" x="537" y="0"></text>
  </g>
</g>
`;

exports[`<dumbbell-plot> rendered-html reference line should pass referenceStyle prop 1`] = `<line class="dumbbell-reference-line" data-testid="reference-line" opacity="0" x1="0" x2="537" y1="0" y2="0"></line>`;

exports[`<dumbbell-plot> rendered-html render should render with minimal props[data,oridnalAccessor,seriesAccessor,valueAccessor] given 1`] = `
<dumbbell-plot id="unique-d-plot">
  <div class="o-layout">
    <div class="vcl-accessibility-instructions" id="chart-instructions-unique-d-plot" style="position: absolute; width: 650px;">
      <p class="screen-reader-info vcl-region-label">
        Keyboard interactive dumbbell-plot, Titled: Dumbbell Plot Title. This section contains additional information about this chart. Pressing TAB will focus the keyboard instructions menu. Tabbing again takes you to the chart area.
      </p>
      <h2 class="screen-reader-info vcl-access-title">
        Chart title: Dumbbell Plot Title
      </h2>
      <h3 class="screen-reader-info vcl-access-subtitle">
        Chart subtitle: This is the dumbbell plot's subtitle
      </h3>
      <p class="screen-reader-info vcl-access-executive-summary" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-purpose" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-long-description" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-context" data-level="h3"></p>
      <h3 class="screen-reader-info vcl-access-structure-heading">
        Structure
      </h3>
      <p class="screen-reader-info vcl-access-statistics" data-level="h4"></p>
      <h4 class="screen-reader-info vcl-access-chart-layout-heading">
        Chart Layout Description
      </h4>
      <p class="screen-reader-info vcl-access-layout">
        This is a dumbbell-plot with 12 dumbbells.
      </p>
      <p class="screen-reader-info vcl-access-xAxis">
        The chart has a horizontal X Axis, titled X Axis with a range that starts with Jan 16 and ends with Dec 16.
      </p>
      <p class="screen-reader-info vcl-access-yAxis">
        The chart has a vertical Y axis, titled Y Axis with a range that starts with 3b and ends with 10b.
      </p>
      <p class="screen-reader-info vcl-access-notes" data-annotationlevel="h3" data-level="h4"></p>
    </div>
    <div class="o-layout--chart">
      <h2 aria-hidden="true" class="dumbbell-main-title vcl-main-title" data-testid="main-title">
        Dumbbell Plot Title
      </h2>
      <p aria-hidden="true" class="dumbbell-sub-title vcl-sub-title visa-ui-text--instructions" data-testid="sub-title">
        This is the dumbbell plot's subtitle
      </p>
      <div aria-hidden="true" class="dumbbell-legend vcl-legend" role="presentation" style="display: none;">
        <svg aria-hidden="true" class="vcl-svg" data-testid="legend-container" data-type="bar" focusable="false" height="0" opacity="0" role="presentation" viewBox="0 0 642 0" width="642" style="display: none;">
          <g class="legend-padding-wrapper" transform="translate(60.5,24)">
            <g class="bar legend">
              <rect class="bar-rect" data-base-color="#7c99b1" data-fill="#7c99b1" data-stroke="#35495a" data-stroke-width="1" fill="#7c99b1" height="20" opacity="1" stroke="#35495a" stroke-dasharray="none" stroke-width="1" width="20" x="0" y="0" style="fill: #7c99b1; stroke: #35495a; stroke-width: 1; stroke-dasharray: none;"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="1" x="25" y="0">
                CardA
              </text>
            </g>
            <g class="bar legend">
              <rect class="bar-rect" data-base-color="#cacae7" data-fill="#cacae7" data-stroke="#6868ba" data-stroke-width="1" fill="#cacae7" height="20" opacity="1" stroke="#6868ba" stroke-dasharray="none" stroke-width="1" width="20" x="45" y="0" style="fill: #cacae7; stroke: #6868ba; stroke-width: 1; stroke-dasharray: none;"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="1" x="70" y="0">
                CardB
              </text>
            </g>
          </g>
        </svg>
      </div>
      <keyboard-instructions>
        <div class="vcc-ki-keyboard-instructions-root" style="position: relative; width: 643.5px;">
          <div class="visa-viz-keyboard-instructions-outer-container" style="width: 416px;">
            <div class="vcc-ki-keyboard-instructions-header vcc-ki-minimize">
              <p class="vcc-ki-keyboard-heading">
                Select to View Keyboard Instructions
              </p>
            </div>
            <div class="visa-viz-keyboard-instructions-button-wrapper">
              <button aria-expanded="false" aria-label="display keyboard instructions" class="vcc-ki-btn-icon vcc-ki-btn-icon--light-tiny visa-viz-keyboard-instructions-button" id="visa-viz-keyboard-instructions-button-unique-d-plot" role="button" tabindex="0" type="button">
                <svg class="vcc-ki-icon--tiny" focusable="false" tabindex="-1">
                  <use href="#visa-viz-keyboard-instructions-info--tiny-unique-d-plot"></use>
                </svg>
              </button>
              <svg class="vcc-ki-icons">
                <symbol id="visa-viz-keyboard-instructions-info--tiny-unique-d-plot" viewbox="0 0 16 16">
                  <path d="M8.7,3.8a.68.68,0,0,1,.7.7.79.79,0,0,1-.8.8H8.5c-.4,0-.6-.3-.6-.7A.79.79,0,0,1,8.7,3.8ZM6.6,12.1l1.2-6H9l-1.2,6ZM14,8a6,6,0,1,0-6,6A6,6,0,0,0,14,8Zm2,0A8,8,0,1,1,8,0,8,8,0,0,1,16,8Z"></path>
                </symbol>
              </svg>
            </div>
            <div class="visa-viz-keyboard-instructions-container" id="visa-viz-keyboard-instructions-container-unique-d-plot"></div>
          </div>
        </div>
      </keyboard-instructions>
      <div class="visa-viz-d3-dumbbell-container" data-testid="chart-container" style="position: relative;">
        <div aria-label="Dumbbell Plot Title. This is the dumbbell plot's subtitle.  Navigate into the chart area by pressing ENTER. ID: unique-d-plot" class="VCL-controller" id="chart-area-unique-d-plot" role="application" tabindex="0" style="position: absolute; top: 0; left: 0; opacity: 0; pointer-events: none; width: 0px; height: 0px;">
          Interactive dumbbell-plot.
        </div>
        <svg class="vcl-svg" focusable="false" height="300" role="presentation" tabindex="-1" viewBox="0 0 650 300" width="650" style="overflow: hidden;">
          <g data-testid="margin-container" id="visa-viz-margin-container-g-unique-d-plot" transform="translate(6.5, 3)">
            <g data-testid="padding-container" id="visa-viz-padding-container-g-unique-d-plot" transform="translate(50, 20)">
              <defs aria-hidden="true" focusable="false" role="presentation">
                <filter class="vcl-inversion-filter" color-interpolation-filters="sRGB" id="inversion-unique-d-plot">
                  <feColorMatrix in="SourceGraphic" type="matrix" values="-1 0 0 0 1 
        0 -1 0 0 1 
        0 0 -1 0 1
        0 0 0 1 0"></feColorMatrix>
                  <feColorMatrix type="hueRotate" values="180"></feColorMatrix>
                </filter>
                <g class="dotmarkers">
                  <marker class="marker-dot" data-testid="marker" fill="#7c99b1" id="marker-unique-d-plot0dot87c99b111" markerHeight="16" markerUnits="userSpaceOnUse" markerWidth="16" opacity="1" orient="auto" refX="5.3125" refY="5.3125" stroke="#35495a" stroke-width="0.625" viewBox="0 0 10.625 10.625">
                    <circle cx="5.3125" cy="5.3125" r="5"></circle>
                  </marker>
                  <marker class="marker-dot" data-testid="marker" fill="#cacae7" id="marker-unique-d-plot1dot8cacae711" markerHeight="16" markerUnits="userSpaceOnUse" markerWidth="16" opacity="1" orient="auto" refX="5.3125" refY="5.3125" stroke="#6868ba" stroke-width="0.625" viewBox="0 0 10.625 10.625">
                    <circle cx="5.3125" cy="5.3125" r="5"></circle>
                  </marker>
                  <marker class="marker-dot" data-testid="marker" fill="#7c99b1" id="marker-unique-d-plot2dot87c99b111" markerHeight="16" markerUnits="userSpaceOnUse" markerWidth="16" opacity="1" orient="auto" refX="5.3125" refY="5.3125" stroke="#35495a" stroke-width="0.625" viewBox="0 0 10.625 10.625">
                    <circle cx="5.3125" cy="5.3125" r="5"></circle>
                  </marker>
                  <marker class="marker-dot" data-testid="marker" fill="#cacae7" id="marker-unique-d-plot3dot8cacae711" markerHeight="16" markerUnits="userSpaceOnUse" markerWidth="16" opacity="1" orient="auto" refX="5.3125" refY="5.3125" stroke="#6868ba" stroke-width="0.625" viewBox="0 0 10.625 10.625">
                    <circle cx="5.3125" cy="5.3125" r="5"></circle>
                  </marker>
                  <marker class="marker-dot" data-testid="marker" fill="#7c99b1" id="marker-unique-d-plot4dot87c99b121" markerHeight="24" markerUnits="userSpaceOnUse" markerWidth="24" opacity="1" orient="auto" refX="5.208333333333333" refY="5.208333333333333" stroke="#35495a" stroke-width="0.4166666666666667" viewBox="0 0 10.416666666666666 10.416666666666666">
                    <circle cx="5.208333333333333" cy="5.208333333333333" r="5"></circle>
                  </marker>
                  <marker class="marker-dot" data-testid="marker" fill="#cacae7" id="marker-unique-d-plot5dot8cacae721" markerHeight="24" markerUnits="userSpaceOnUse" markerWidth="24" opacity="1" orient="auto" refX="5.208333333333333" refY="5.208333333333333" stroke="#6868ba" stroke-width="0.4166666666666667" viewBox="0 0 10.416666666666666 10.416666666666666">
                    <circle cx="5.208333333333333" cy="5.208333333333333" r="5"></circle>
                  </marker>
                </g>
                <filter class="VCL-t-s-f-ffffff" id="VCL-t-s-f-ffffffunique-d-plot">
                  <feMorphology in="SourceAlpha" operator="dilate" radius="1.5" result="dilatedText"></feMorphology>
                  <feFlood flood-color="#ffffff" flood-opacity="1" result="whiteTextFlood"></feFlood>
                  <feComposite in="whiteTextFlood" in2="dilatedText" operator="in" result="textOutline"></feComposite>
                  <feMerge>
                    <feMergeNode in="textOutline"></feMergeNode>
                    <feMergeNode in="textOutline"></feMergeNode>
                    <feMergeNode in="textOutline"></feMergeNode>
                    <feMergeNode in="SourceGraphic"></feMergeNode>
                  </feMerge>
                </filter>
              </defs>
              <g aria-hidden="true" class="baseline-group" data-testid="baseline-group" focusable="false" role="presentation">
                <g class="axis-mark axis-mark-y" data-testid="y-axis-mark" fill="none" font-family="sans-serif" font-size="10" opacity="0" text-anchor="end" transform="">
                  <path class="domain" d="M0.5,224.5V0.5" stroke="currentColor"></path>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,212.0549002223097)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,184.37778301396955)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,156.7006658056294)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,129.02354859728928)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,101.34643138894913)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,73.66931418060898)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,45.992196972268815)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,18.31507976392869)">
                    <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10"></text>
                  </g>
                </g>
                <g class="axis-mark axis-mark-x" data-testid="x-axis-mark" fill="none" font-family="sans-serif" font-size="10" opacity="0" text-anchor="middle" transform="translate(0, 294.5862518473301)">
                  <path class="domain" d="M0.5,0.5H537.5" stroke="currentColor"></path>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(41.7379746835443,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(83.88227848101266,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(123.30759493670885,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(165.39525316455698,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(206.18006329113925,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(248.3243670886076,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(289.1091772151899,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(331.2534810126582,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(373.39778481012655,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(414.1825949367089,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(456.32689873417723,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                  <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(497.16835443037974,0)">
                    <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                    <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                  </g>
                </g>
              </g>
              <g aria-hidden="true" class="gridline-group" focusable="false" role="presentation">
                <g class="bottom grid" data-testid="grid-bottom" fill="none" font-family="sans-serif" font-size="10" opacity="0" text-anchor="middle">
                  <path class="domain" d="M0.5,224V0.5H537.5V224" stroke="currentColor"></path>
                  <g class="tick" opacity="1" transform="translate(41.7379746835443,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(83.88227848101266,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(123.30759493670885,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(165.39525316455698,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(206.18006329113925,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(248.3243670886076,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(289.1091772151899,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(331.2534810126582,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(373.39778481012655,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(414.1825949367089,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(456.32689873417723,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(497.16835443037974,0)">
                    <line stroke="currentColor" y2="224"></line>
                    <text dy="0.71em" fill="currentColor" y="227"></text>
                  </g>
                </g>
                <g class="grid left" data-testid="grid-left" fill="none" font-family="sans-serif" font-size="10" opacity="1" text-anchor="end">
                  <path class="domain" d="M537,224.5H0.5V0.5H537" stroke="currentColor"></path>
                  <g class="tick" opacity="1" transform="translate(0,212.0549002223097)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,184.37778301396955)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,156.7006658056294)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,129.02354859728928)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,101.34643138894913)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,73.66931418060898)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,45.992196972268815)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="1" transform="translate(0,18.31507976392869)">
                    <line stroke="currentColor" x2="537"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                </g>
              </g>
              <g class="dumbbell-group" data-testid="dumbbell-group" filter="url(#VCL-t-s-f-ffffffunique-d-plot)" focusable="false" id="unique-d-plot-123457-123457-123457" role="presentation" tabindex="-1">
                <path class="dumbbell-plot moving" cursor="default" d="M 40.78481012658228 82.27423135146653 L 40.78481012658228 82.27523135146653 L 40.78481012658228 82.27523135146653 L 40.78481012658228 112.7200602806407 L 40.78481012658228 112.7200602806407 L 40.78481012658228 112.7200602806407 L 40.78481012658228 82.27523135146653 L 40.78481012658228 82.27523135146653 L 40.78481012658228 82.27523135146653 L 40.78481012658228 112.7200602806407 L 40.78481012658228 112.7200602806407 L 40.78481012658228 112.7210602806407" data-barSize="1" data-centerX1="40.78481012658228" data-centerX2="40.78481012658228" data-centerY1="82.27523135146653" data-centerY2="112.7200602806407" data-d="M 40.78481012658228 82.27423135146653 L 40.78481012658228 82.27523135146653 L 41.28481012658228 82.27523135146653 L 41.28481012658228 112.7200602806407 L 40.78481012658228 112.7200602806407 L 40.28481012658228 112.7200602806407 L 40.28481012658228 82.27523135146653 L 40.78481012658228 82.27523135146653 L 41.28481012658228 82.27523135146653 L 41.28481012658228 112.7200602806407 L 40.78481012658228 112.7200602806407 L 40.78481012658228 112.7210602806407" data-id="line-Thu Dec 31 2015 16:00:00 GMT-0800 (Pacific Standard Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 82.92911392405063 83.43901997843645 L 82.92911392405063 83.44001997843645 L 82.92911392405063 83.44001997843645 L 82.92911392405063 166.47137160345687 L 82.92911392405063 166.47137160345687 L 82.92911392405063 166.47137160345687 L 82.92911392405063 83.44001997843645 L 82.92911392405063 83.44001997843645 L 82.92911392405063 83.44001997843645 L 82.92911392405063 166.47137160345687 L 82.92911392405063 166.47137160345687 L 82.92911392405063 166.47237160345688" data-barSize="1" data-centerX1="82.92911392405063" data-centerX2="82.92911392405063" data-centerY1="83.44001997843645" data-centerY2="166.47137160345687" data-d="M 82.92911392405063 83.43901997843645 L 82.92911392405063 83.44001997843645 L 83.42911392405063 83.44001997843645 L 83.42911392405063 166.47137160345687 L 82.92911392405063 166.47137160345687 L 82.42911392405063 166.47137160345687 L 82.42911392405063 83.44001997843645 L 82.92911392405063 83.44001997843645 L 83.42911392405063 83.44001997843645 L 83.42911392405063 166.47137160345687 L 82.92911392405063 166.47137160345687 L 82.92911392405063 166.47237160345688" data-id="line-Sun Jan 31 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 122.35443037974683 63.2367299832924 L 122.35443037974683 63.2377299832924 L 122.35443037974683 63.2377299832924 L 122.35443037974683 173.94619881665298 L 122.35443037974683 173.94619881665298 L 122.35443037974683 173.94619881665298 L 122.35443037974683 63.2377299832924 L 122.35443037974683 63.2377299832924 L 122.35443037974683 63.2377299832924 L 122.35443037974683 173.94619881665298 L 122.35443037974683 173.94619881665298 L 122.35443037974683 173.94719881665299" data-barSize="1" data-centerX1="122.35443037974683" data-centerX2="122.35443037974683" data-centerY1="63.2377299832924" data-centerY2="173.94619881665298" data-d="M 122.35443037974683 63.2367299832924 L 122.35443037974683 63.2377299832924 L 122.85443037974683 63.2377299832924 L 122.85443037974683 173.94619881665298 L 122.35443037974683 173.94619881665298 L 121.85443037974683 173.94619881665298 L 121.85443037974683 63.2377299832924 L 122.35443037974683 63.2377299832924 L 122.85443037974683 63.2377299832924 L 122.85443037974683 173.94619881665298 L 122.35443037974683 173.94619881665298 L 122.35443037974683 173.94719881665299" data-id="line-Mon Feb 29 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 164.4987341772152 63.90082616423873 L 164.4987341772152 63.90182616423873 L 164.4987341772152 63.90182616423873 L 164.4987341772152 141.3977543475911 L 164.4987341772152 141.3977543475911 L 164.4987341772152 141.3977543475911 L 164.4987341772152 63.90182616423873 L 164.4987341772152 63.90182616423873 L 164.4987341772152 63.90182616423873 L 164.4987341772152 141.3977543475911 L 164.4987341772152 141.3977543475911 L 164.4987341772152 141.3987543475911" data-barSize="1" data-centerX1="164.4987341772152" data-centerX2="164.4987341772152" data-centerY1="63.90182616423873" data-centerY2="141.3977543475911" data-d="M 164.4987341772152 63.90082616423873 L 164.4987341772152 63.90182616423873 L 164.9987341772152 63.90182616423873 L 164.9987341772152 141.3977543475911 L 164.4987341772152 141.3977543475911 L 163.9987341772152 141.3977543475911 L 163.9987341772152 63.90182616423873 L 164.4987341772152 63.90182616423873 L 164.9987341772152 63.90182616423873 L 164.9987341772152 141.3977543475911 L 164.4987341772152 141.3977543475911 L 164.4987341772152 141.3987543475911" data-id="line-Thu Mar 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 205.28354430379747 56.87756202308088 L 205.28354430379747 56.878562023080875 L 205.28354430379747 56.878562023080875 L 205.28354430379747 173.12245429810946 L 205.28354430379747 173.12245429810946 L 205.28354430379747 173.12245429810946 L 205.28354430379747 56.878562023080875 L 205.28354430379747 56.878562023080875 L 205.28354430379747 56.878562023080875 L 205.28354430379747 173.12245429810946 L 205.28354430379747 173.12245429810946 L 205.28354430379747 173.12345429810946" data-barSize="1" data-centerX1="205.28354430379747" data-centerX2="205.28354430379747" data-centerY1="56.878562023080875" data-centerY2="173.12245429810946" data-d="M 205.28354430379747 56.87756202308088 L 205.28354430379747 56.878562023080875 L 205.78354430379747 56.878562023080875 L 205.78354430379747 173.12245429810946 L 205.28354430379747 173.12245429810946 L 204.78354430379747 173.12245429810946 L 204.78354430379747 56.878562023080875 L 205.28354430379747 56.878562023080875 L 205.78354430379747 56.878562023080875 L 205.78354430379747 173.12245429810946 L 205.28354430379747 173.12245429810946 L 205.28354430379747 173.12345429810946" data-id="line-Sat Apr 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 247.42784810126582 59.76726011214541 L 247.42784810126582 59.768260112145406 L 247.42784810126582 59.768260112145406 L 247.42784810126582 198.15384615384613 L 247.42784810126582 198.15384615384613 L 247.42784810126582 198.15384615384613 L 247.42784810126582 59.768260112145406 L 247.42784810126582 59.768260112145406 L 247.42784810126582 59.768260112145406 L 247.42784810126582 198.15384615384613 L 247.42784810126582 198.15384615384613 L 247.42784810126582 198.15484615384614" data-barSize="1" data-centerX1="247.42784810126582" data-centerX2="247.42784810126582" data-centerY1="59.768260112145406" data-centerY2="198.15384615384613" data-d="M 247.42784810126582 59.76726011214541 L 247.42784810126582 59.768260112145406 L 247.92784810126582 59.768260112145406 L 247.92784810126582 198.15384615384613 L 247.42784810126582 198.15384615384613 L 246.92784810126582 198.15384615384613 L 246.92784810126582 59.768260112145406 L 247.42784810126582 59.768260112145406 L 247.92784810126582 59.768260112145406 L 247.92784810126582 198.15384615384613 L 247.42784810126582 198.15384615384613 L 247.42784810126582 198.15484615384614" data-id="line-Tue May 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 288.21265822784807 51.61790889358376 L 288.21265822784807 51.61890889358376 L 288.21265822784807 51.61890889358376 L 288.21265822784807 195.53991837695253 L 288.21265822784807 195.53991837695253 L 288.21265822784807 195.53991837695253 L 288.21265822784807 51.61890889358376 L 288.21265822784807 51.61890889358376 L 288.21265822784807 51.61890889358376 L 288.21265822784807 195.53991837695253 L 288.21265822784807 195.53991837695253 L 288.21265822784807 195.54091837695253" data-barSize="1" data-centerX1="288.21265822784807" data-centerX2="288.21265822784807" data-centerY1="51.61890889358376" data-centerY2="195.53991837695253" data-d="M 288.21265822784807 51.61790889358376 L 288.21265822784807 51.61890889358376 L 288.71265822784807 51.61890889358376 L 288.71265822784807 195.53991837695253 L 288.21265822784807 195.53991837695253 L 287.71265822784807 195.53991837695253 L 287.71265822784807 51.61890889358376 L 288.21265822784807 51.61890889358376 L 288.71265822784807 51.61890889358376 L 288.71265822784807 195.53991837695253 L 288.21265822784807 195.53991837695253 L 288.21265822784807 195.54091837695253" data-id="line-Thu Jun 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 330.3569620253164 50.71765809753691 L 330.3569620253164 50.71865809753691 L 330.3569620253164 50.71865809753691 L 330.3569620253164 117.14373939755325 L 330.3569620253164 117.14373939755325 L 330.3569620253164 117.14373939755325 L 330.3569620253164 50.71865809753691 L 330.3569620253164 50.71865809753691 L 330.3569620253164 50.71865809753691 L 330.3569620253164 117.14373939755325 L 330.3569620253164 117.14373939755325 L 330.3569620253164 117.14473939755325" data-barSize="1" data-centerX1="330.3569620253164" data-centerX2="330.3569620253164" data-centerY1="50.71865809753691" data-centerY2="117.14373939755325" data-d="M 330.3569620253164 50.71765809753691 L 330.3569620253164 50.71865809753691 L 330.8569620253164 50.71865809753691 L 330.8569620253164 117.14373939755325 L 330.3569620253164 117.14373939755325 L 329.8569620253164 117.14373939755325 L 329.8569620253164 50.71865809753691 L 330.3569620253164 50.71865809753691 L 330.8569620253164 50.71865809753691 L 330.8569620253164 117.14373939755325 L 330.3569620253164 117.14373939755325 L 330.3569620253164 117.14473939755325" data-id="line-Sun Jul 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 372.50126582278483 60.377364962957735 L 372.50126582278483 60.37836496295773 L 372.50126582278483 60.37836496295773 L 372.50126582278483 148.9451400296462 L 372.50126582278483 148.9451400296462 L 372.50126582278483 148.9451400296462 L 372.50126582278483 60.37836496295773 L 372.50126582278483 60.37836496295773 L 372.50126582278483 60.37836496295773 L 372.50126582278483 148.9451400296462 L 372.50126582278483 148.9451400296462 L 372.50126582278483 148.94614002964622" data-barSize="1" data-centerX1="372.50126582278483" data-centerX2="372.50126582278483" data-centerY1="60.37836496295773" data-centerY2="148.9451400296462" data-d="M 372.50126582278483 60.377364962957735 L 372.50126582278483 60.37836496295773 L 373.00126582278483 60.37836496295773 L 373.00126582278483 148.9451400296462 L 372.50126582278483 148.9451400296462 L 372.00126582278483 148.9451400296462 L 372.00126582278483 60.37836496295773 L 372.50126582278483 60.37836496295773 L 373.00126582278483 60.37836496295773 L 373.00126582278483 148.9451400296462 L 372.50126582278483 148.9451400296462 L 372.50126582278483 148.94614002964622" data-id="line-Wed Aug 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 413.2860759493671 44.05382997970141 L 413.2860759493671 44.05482997970141 L 413.2860759493671 44.05482997970141 L 413.2860759493671 165.83414569639802 L 413.2860759493671 165.83414569639802 L 413.2860759493671 165.83414569639802 L 413.2860759493671 44.05482997970141 L 413.2860759493671 44.05482997970141 L 413.2860759493671 44.05482997970141 L 413.2860759493671 165.83414569639802 L 413.2860759493671 165.83414569639802 L 413.2860759493671 165.83514569639803" data-barSize="1" data-centerX1="413.2860759493671" data-centerX2="413.2860759493671" data-centerY1="44.05482997970141" data-centerY2="165.83414569639802" data-d="M 413.2860759493671 44.05382997970141 L 413.2860759493671 44.05482997970141 L 413.7860759493671 44.05482997970141 L 413.7860759493671 165.83414569639802 L 413.2860759493671 165.83414569639802 L 412.7860759493671 165.83414569639802 L 412.7860759493671 44.05482997970141 L 413.2860759493671 44.05482997970141 L 413.7860759493671 44.05482997970141 L 413.7860759493671 165.83414569639802 L 413.2860759493671 165.83414569639802 L 413.2860759493671 165.83514569639803" data-id="line-Fri Sep 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 455.4303797468354 49.01034303420586 L 455.4303797468354 49.01134303420586 L 455.4303797468354 49.01134303420586 L 455.4303797468354 107.13328917172018 L 455.4303797468354 107.13328917172018 L 455.4303797468354 107.13328917172018 L 455.4303797468354 49.01134303420586 L 455.4303797468354 49.01134303420586 L 455.4303797468354 49.01134303420586 L 455.4303797468354 107.13328917172018 L 455.4303797468354 107.13328917172018 L 455.4303797468354 107.13428917172018" data-barSize="1" data-centerX1="455.4303797468354" data-centerX2="455.4303797468354" data-centerY1="49.01134303420586" data-centerY2="107.13328917172018" data-d="M 455.4303797468354 49.01034303420586 L 455.4303797468354 49.01134303420586 L 455.9303797468354 49.01134303420586 L 455.9303797468354 107.13328917172018 L 455.4303797468354 107.13328917172018 L 454.9303797468354 107.13328917172018 L 454.9303797468354 49.01134303420586 L 455.4303797468354 49.01134303420586 L 455.9303797468354 49.01134303420586 L 455.9303797468354 107.13328917172018 L 455.4303797468354 107.13328917172018 L 455.4303797468354 107.13428917172018" data-id="line-Mon Oct 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
                <path class="dumbbell-plot moving" cursor="default" d="M 496.2151898734177 25.845153846153828 L 496.2151898734177 25.84615384615383 L 496.2151898734177 25.84615384615383 L 496.2151898734177 139.32233440034844 L 496.2151898734177 139.32233440034844 L 496.2151898734177 139.32233440034844 L 496.2151898734177 25.84615384615383 L 496.2151898734177 25.84615384615383 L 496.2151898734177 25.84615384615383 L 496.2151898734177 139.32233440034844 L 496.2151898734177 139.32233440034844 L 496.2151898734177 139.32333440034844" data-barSize="1" data-centerX1="496.2151898734177" data-centerX2="496.2151898734177" data-centerY1="25.84615384615383" data-centerY2="139.32233440034844" data-d="M 496.2151898734177 25.845153846153828 L 496.2151898734177 25.84615384615383 L 496.7151898734177 25.84615384615383 L 496.7151898734177 139.32233440034844 L 496.2151898734177 139.32233440034844 L 495.7151898734177 139.32233440034844 L 495.7151898734177 25.84615384615383 L 496.2151898734177 25.84615384615383 L 496.7151898734177 25.84615384615383 L 496.7151898734177 139.32233440034844 L 496.2151898734177 139.32233440034844 L 496.2151898734177 139.32333440034844" data-id="line-Wed Nov 30 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-role="img" data-testid="line" data-translate-x="56.5" data-translate-y="23" fill="#abb798" fill-opacity="1" focusable="false" id="unique-d-plot-123457-123457-123457" marker-end="url(#marker-unique-d-plot1dot8cacae711)" marker-start="url(#marker-unique-d-plot0dot87c99b111)" opacity="1" role="presentation" stroke="#576245" stroke-opacity="1" tabindex="-1"></path>
              </g>
              <g aria-hidden="true" class="dumbbell-series-wrapper" focusable="false" role="presentation">
                <text class="dumbbell-series-label" data-testid="series-label" data-text-anchor="start" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="537" data-y="NaN" dx="0.1em" dy="0.3em" fill="#587893" filter="url(#VCL-t-s-f-ffffffunique-d-plot)" opacity="1" text-anchor="start" x="537" y="25.84615384615383">
                  CardA
                </text>
                <text class="dumbbell-series-label" data-testid="series-label" data-text-anchor="start" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="537" data-y="NaN" dx="0.1em" dy="0.3em" fill="#6b6bbc" filter="url(#VCL-t-s-f-ffffffunique-d-plot)" opacity="1" text-anchor="start" x="537" y="139.32233440034844">
                  CardB
                </text>
              </g>
              <g aria-hidden="true" class="dumbbell-diff-label-wrapper" filter="url(#VCL-t-s-f-ffffffunique-d-plot)" focusable="false" role="presentation">
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Thu Dec 31 2015 16:00:00 GMT-0800 (Pacific Standard Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="40.78481012658228" data-y="97.49764581605359" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="40.78481012658228" y="97.49764581605359">
                  1.1b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Sun Jan 31 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="82.92911392405063" data-y="124.95569579094663" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="82.92911392405063" y="124.95569579094663">
                  3b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Mon Feb 29 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="122.35443037974683" data-y="118.59196439997268" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="122.35443037974683" y="118.59196439997268">
                  4b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Thu Mar 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="164.4987341772152" data-y="102.64979025591494" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="164.4987341772152" y="102.64979025591494">
                  2.8b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Sat Apr 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="205.28354430379747" data-y="115.00050816059516" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="205.28354430379747" y="115.00050816059516">
                  4.2b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Tue May 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="247.42784810126582" data-y="128.96105313299577" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="247.42784810126582" y="128.96105313299577">
                  5b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Thu Jun 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="288.21265822784807" data-y="123.57941363526811" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="288.21265822784807" y="123.57941363526811">
                  5.2b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Sun Jul 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="330.3569620253164" data-y="83.93119874754508" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="330.3569620253164" y="83.93119874754508">
                  2.4b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Wed Aug 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="372.50126582278483" data-y="104.66175249630199" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="372.50126582278483" y="104.66175249630199">
                  3.2b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Fri Sep 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="413.2860759493671" data-y="104.94448783804972" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="413.2860759493671" y="104.94448783804972">
                  4.4b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Mon Oct 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="455.4303797468354" data-y="78.07231610296301" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="455.4303797468354" y="78.07231610296301">
                  2.1b
                </text>
                <text class="dumbbell-diff-label" cursor="default" data-id="difference-label-Wed Nov 30 2016 16:00:00 GMT-0800 (Pacific Standard Time)" data-testid="difference-label" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="496.2151898734177" data-y="82.58424412325114" dx="-4.5" dy="0.3em" fill="#6c7a55" opacity="0" text-anchor="end" x="496.2151898734177" y="82.58424412325114">
                  4.1b
                </text>
              </g>
              <g aria-hidden="true" class="dumbbell-dataLabel-group" filter="url(#VCL-t-s-f-ffffffunique-d-plot)" focusable="false" role="presentation">
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Dec 31 2015 16:00:00 GMT-0800 (Pacific Standard Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="40.78481012658228" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="40.78481012658228" y="74.27523135146653">
                    7.7b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Dec 31 2015 16:00:00 GMT-0800 (Pacific Standard Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="40.78481012658228" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="40.78481012658228" y="120.7200602806407">
                    6.6b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#6b6bbc" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sun Jan 31 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="82.92911392405063" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="82.92911392405063" y="75.44001997843645">
                    7.6b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sun Jan 31 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="82.92911392405063" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="82.92911392405063" y="174.47137160345687">
                    4.6b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#6c7a55" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Mon Feb 29 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="122.35443037974683" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="122.35443037974683" y="55.2377299832924">
                    8.4b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Mon Feb 29 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="122.35443037974683" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="122.35443037974683" y="181.94619881665298">
                    4.4b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Mar 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="164.4987341772152" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="164.4987341772152" y="55.90182616423873">
                    8.3b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Mar 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="164.4987341772152" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="164.4987341772152" y="149.3977543475911">
                    5.5b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sat Apr 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="205.28354430379747" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="205.28354430379747" y="48.878562023080875">
                    8.6b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sat Apr 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="205.28354430379747" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="205.28354430379747" y="181.12245429810946">
                    4.4b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Tue May 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="247.42784810126582" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="247.42784810126582" y="51.768260112145406">
                    8.5b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Tue May 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="247.42784810126582" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="247.42784810126582" y="206.15384615384613">
                    3.5b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Jun 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="288.21265822784807" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="288.21265822784807" y="43.61890889358376">
                    8.8b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Thu Jun 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="288.21265822784807" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="288.21265822784807" y="203.53991837695253">
                    3.6b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sun Jul 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="330.3569620253164" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="330.3569620253164" y="42.71865809753691">
                    8.8b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Sun Jul 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="330.3569620253164" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="330.3569620253164" y="125.14373939755325">
                    6.4b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Wed Aug 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="372.50126582278483" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="372.50126582278483" y="52.37836496295773">
                    8.5b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Wed Aug 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="372.50126582278483" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="372.50126582278483" y="156.9451400296462">
                    5.3b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Fri Sep 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="413.2860759493671" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="413.2860759493671" y="36.05482997970141">
                    9.1b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Fri Sep 30 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="413.2860759493671" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="413.2860759493671" y="173.83414569639802">
                    4.7b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Mon Oct 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="455.4303797468354" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="455.4303797468354" y="41.01134303420586">
                    8.9b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Mon Oct 31 2016 17:00:00 GMT-0700 (Pacific Daylight Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="455.4303797468354" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="455.4303797468354" y="115.13328917172018">
                    6.8b
                  </text>
                </g>
                <g class="dumbbell-label-wrapper" data-testid="dataLabel-wrapper" fill="#587893" opacity="1">
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Wed Nov 30 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardA" data-offset="-8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="496.2151898734177" data-y="NaN" dx="0.0em" dy="-0.3em" fill="#587893" opacity="1" text-anchor="middle" x="496.2151898734177" y="17.84615384615383">
                    9.7b
                  </text>
                  <text class="dumbbell-dataLabel transitioning" cursor="default" data-id="label-Wed Nov 30 2016 16:00:00 GMT-0800 (Pacific Standard Time)-CardB" data-offset="8" data-testid="dataLabel" data-translate-x="56.5" data-translate-y="23" data-use-dx="false" data-use-dy="false" data-x="496.2151898734177" data-y="NaN" dx="0.0em" dy="0.9em" fill="#6b6bbc" opacity="1" text-anchor="middle" x="496.2151898734177" y="147.32233440034844">
                    5.6b
                  </text>
                </g>
              </g>
              <g aria-hidden="true" class="dumbbell-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="editable vcl-annotation-group" data-testid="editable-annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="axis bottom x" data-testid="x-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" opacity="1" role="presentation" text-anchor="middle" transform="translate(0, 224)">
                <path class="domain" d="M0.5,0.5H537.5" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(41.7379746835443,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jan 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(83.88227848101266,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Feb 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(123.30759493670885,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Mar 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(165.39525316455698,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Apr 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(206.18006329113925,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      May 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(248.3243670886076,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jun 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(289.1091772151899,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jul 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(331.2534810126582,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Aug 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(373.39778481012655,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Sep 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(414.1825949367089,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Oct 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(456.32689873417723,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Nov 16
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(497.16835443037974,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Dec 16
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label bottom x" data-testid="x-axis-label" focusable="false" role="presentation" transform="translate(0, 0)" x="268.5" y="274">
                X Axis
              </text>
              <g aria-hidden="true" class="axis left y" data-testid="y-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" opacity="1" role="presentation" text-anchor="end">
                <path class="domain" d="M0.5,224.5V0.5" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,212.0549002223097)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      3b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,184.37778301396955)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      4b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,156.7006658056294)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      5b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,129.02354859728928)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      6b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,101.34643138894913)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      7b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,73.66931418060898)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      8b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,45.992196972268815)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      9b
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="1" transform="translate(0,18.31507976392869)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      10b
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label left y" data-testid="y-axis-label" dy="1em" focusable="false" role="presentation" transform="rotate(-90)" x="-112" y="-50">
                Y Axis
              </text>
            </g>
          </g>
        </svg>
      </div>
      <div class="dumbbell-tooltip vcl-tooltip" data-testid="tooltip-container" style="display: block; position: absolute; padding: 0.5rem; opacity: 0; background-color: #ffffff; font-size: 14px; font-weight: 400; color: #222222; border: 1px solid #565656; border-radius: 3px; pointer-events: none; min-width: 80px; max-width: 300px;">
        <p style="margin: 0;"></p>
      </div>
      <data-table>
        <div class="visa-viz-data-table-outer-container">
          <div class="visa-viz-button-wrapper" style="padding-bottom: 0px;">
            <button aria-expanded="false" aria-label="display data table" class="vcc-btn-icon vcc-btn-icon--light-tiny visa-viz-data-table-button" id="visa-viz-data-table-button-unique-d-plot" role="button" tabindex="0" type="button" style="transform: translate(21.5px,
                -40px);">
              <svg class="vcc-icon--tiny" focusable="false" tabindex="-1">
                <use href="#visa-viz-view-grid--tiny-unique-d-plot"></use>
              </svg>
            </button>
            <svg class="vcc-icons">
              <symbol id="visa-viz-view-grid--tiny-unique-d-plot" viewbox="0 0 16 16">
                <path d="M5,5 L5,2 L2,2 L2,5 L5,5 Z M5,7 L2,7 C0.894905844,7 0,6.1044757 0,5 L0,2 C0,0.8955243 0.894905844,3.55271368e-15 2,3.55271368e-15 L5,3.55271368e-15 C6.10509416,3.55271368e-15 7,0.8955243 7,2 L7,5 C7,6.1044757 6.10509416,7 5,7 Z M14,5 L14,2 L11,2 L11,5 L14,5 Z M14,7 L11,7 C9.89490584,7 9,6.1044757 9,5 L9,2 C9,0.8955243 9.89490584,3.55271368e-15 11,3.55271368e-15 L14,3.55271368e-15 C15.1050942,3.55271368e-15 16,0.8955243 16,2 L16,5 C16,6.1044757 15.1050942,7 14,7 Z M5,14 L5,11 L2,11 L2,14 L5,14 Z M5,16 L2,16 C0.894905844,16 0,15.1044757 0,14 L0,11 C0,9.8955243 0.894905844,9 2,9 L5,9 C6.10509416,9 7,9.8955243 7,11 L7,14 C7,15.1044757 6.10509416,16 5,16 Z M14,14 L14,11 L11,11 L11,14 L14,14 Z M14,16 L11,16 C9.89490584,16 9,15.1044757 9,14 L9,11 C9,9.8955243 9.89490584,9 11,9 L14,9 C15.1050942,9 16,9.8955243 16,11 L16,14 C16,15.1044757 15.1050942,16 14,16 Z"></path>
                <g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
                  <mask fill="#fff">
                    <use xlink:href="#path-1"></use>
                  </mask>
                  <use fill="#000" fill-rule="nonzero" xlink:href="#path-1"></use>
                </g>
              </symbol>
            </svg>
          </div>
          <div class="visa-viz-data-table-container" id="visa-viz-data-table-container-unique-d-plot"></div>
        </div>
      </data-table>
    </div>
  </div>
</dumbbell-plot>
`;
